--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "The backend of a show tracker project",
   "main": "./app.js",
   "scripts": {
-    "test": "npx nodemon ./app.ts"
+    "dev": "npx nodemon ./app.ts"
   },
   "keywords": [
     "typescript",
@@ -22,8 +22,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5"
   }
